--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ authors = ["Todd L. Smith <todd@availlang.org>"]
 edition = "2018"
 
 [dependencies]
+tokesies = { git = "https://github.com/Jeffail/tokesies" }
